# neme-anima

./: .gitignore  LICENSE  README.md  install_and_run.sh  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/tests/: api.test.ts  selection.test.ts  ws.test.ts
src/neme_anima/: __init__.py  _diffusion_pipe_shim.py  balancing.py  cli.py  config.py  core_tags.py  crop.py  dedup.py  detect.py  extraction_cache.py  frame_select.py  identify.py  llm.py  output.py  pipeline.py  pipeline_progress.py  quality.py  tag.py  track.py  training.py
src/neme_extractor/: __init__.py  cli.py  crop.py  frame_select.py  identify.py  llm.py  output.py  pipeline.py  pipeline_progress.py  tag.py  track.py  training.py  video.py
tests/: test_balancing.py  test_character_copy.py  test_cli.py  test_core_tags.py  test_crop.py  test_dedup.py  test_detect.py  test_extraction_cache.py  test_frame_select.py  test_identify.py  test_identify_router.py  test_output.py  test_pipeline_e2e.py  test_pipeline_tag_stage.py  test_pipeline_wipe.py  test_quality.py  test_smoke.py  test_storage_characters.py  test_storage_metadata.py  test_storage_project.py  test_tag.py  test_track.py  test_training.py  test_training_pruning_balancing.py  test_video.py
tests/server/: test_api_character_copy.py  test_api_characters.py  test_api_core_tags.py  test_api_frames.py  test_api_frames_character.py  test_api_llm.py  test_api_projects.py  test_api_queue.py  test_api_refs.py  (+12 more)
(+71 files in other folders)
